# aws-cli

./: cli.py  main.py  pyproject.toml
